--- a/style.css
+++ b/style.css
@@ -1,15 +1,22 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 body {
-  overflow: hidden;
+    overflow: hidden;
 }
 section {
-  background-color: black;
-  position: relative;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
-.logo {
-  position: absolute;
+svg {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    top: 10px;
+    left: 10px;
+    fill: #ff7000;
 }
